<resources>
    <string name="app_name">Keeper</string>

    <string name="wrong_login_data">The data entered is incorrect</string>
    <string name="user_already_exist">User already exist</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">Or</string>
    <string name="Show">Show</string>
    <string name="facebook">Facebook</string>
    <string name="vkontakte">Vkontakte</string>


</resources>
